<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nama"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/etNama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/alamat"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/etAlamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btLokasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_lokasi" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lokasi"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <Button
            android:id="@+id/btTambahMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tambah_menu" />

        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </ListView>
    </LinearLayout>

    <Button
        android:id="@+id/btKirim"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:text="@string/kirim" />

</LinearLayout>